--- a/app/globals.css
+++ b/app/globals.css
@@ -85,7 +85,7 @@ body {
 }
 
 .animacion-botones {
-  @apply hover:bg-white hover:text-[#58167D] transition-all duration-300 hover:rounded-md rounded-md p-3 hover:p-3 font-medium tracking-widest flex flex-col justify-center items-center
+  @apply hover:bg-[#FDC500] hover:text-[#003F88] transition-all duration-300 hover:rounded-md rounded-md p-3 hover:p-3 font-medium tracking-widest flex flex-col justify-center items-center
 }
 
 .estilo-botones{
