agregando seccion paquete,verano,ofertas

--- a/app/globals.css
+++ b/app/globals.css
@@ -136,6 +136,10 @@ body {
   }
 }
 
+.botones-paquetes{
+  @apply text-white text-center  text-[30px] font-bold absolute bottom-10 left-4  p-2 rounded-2xl w-[90%] z-20
+}
+
 .embla {
   max-width: 80%;
   margin: auto;
